--- a/helloworld-ws/pom.xml
+++ b/helloworld-ws/pom.xml
@@ -73,9 +73,10 @@
         </dependency>
 
         <dependency>
-            <groupId>javax.xml.ws</groupId>
-            <artifactId>jaxws-api</artifactId>
-            <version>2.2.6</version>
+          <groupId>com.sun.xml.ws</groupId>
+          <artifactId>jaxws-ri</artifactId>
+          <version>2.3.3</version>
+          <type>pom</type>
         </dependency>
     </dependencies>
 
