--- a/helloworld-ws/pom.xml
+++ b/helloworld-ws/pom.xml
@@ -83,16 +83,18 @@
     <build>
         <!-- Set the name of the WAR, used as the context root when the app is deployed -->
         <finalName>${project.artifactId}</finalName>
-        <plugin>
-            <groupId>org.wildfly.plugins</groupId>
-            <artifactId>wildfly-maven-plugin</artifactId>
-            <version>1.2.1.Final</version>
-            <configuration>
-                <hostname>localhost</hostname>
-                <port>9990</port>
-                <username>admin</username>
-                <password>admin-password</password>
-            </configuration>
-        </plugin>
+        <plugins>
+            <plugin>
+                <groupId>org.wildfly.plugins</groupId>
+                <artifactId>wildfly-maven-plugin</artifactId>
+                <version>1.2.1.Final</version>
+                <configuration>
+                    <hostname>localhost</hostname>
+                    <port>9990</port>
+                    <username>admin</username>
+                    <password>admin-password</password>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 </project>
