--- a/build.gradle
+++ b/build.gradle
@@ -15,13 +15,13 @@ sourceSets {
     }
 }
 
-task hello(dependsOn: 'test-custom') {
+task hello(dependsOn: 'testcustom') {
     doLast {
         println "Hello task executed successfully!"
     }
 }
 
-task test-custom(dependsOn: 'build') {
+task testcustom(dependsOn: 'build') {
     doLast {
         println "Custom test task executed!"
     }
