--- a/build.gradle
+++ b/build.gradle
@@ -44,5 +44,5 @@ task createDistribution(type: Zip) {
     dependsOn 'jar'
     from jar
     archiveFileName = "hello-${project.version}.zip"
-    destinationDir file("$buildDir/distributions")
+    destinationDir = file("$buildDir/distributions")
 }
