--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,14 @@ allprojects {
             }
         }
     }
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        testImplementation 'junit:junit:4.13.2' 
+    }
+    
 }
 
 subprojects {
