--- a/build.gradle
+++ b/build.gradle
@@ -1,30 +1,28 @@
 apply plugin: 'java'
 
 allprojects {
-    apply plugin: 'java'
-    
     archivesBaseName = 'hello'
-    
+
     sourceSets {
         main {
             java {
-                srcDir 'src'
+                srcDir 'src/main/java'
             }
         }
         test {
             java {
-                srcDir 'src/test'
+                srcDir 'src/test/java'
             }
         }
     }
+
     repositories {
         mavenCentral()
     }
 
     dependencies {
-        testImplementation 'junit:junit:4.13.2' 
+        testImplementation 'junit:junit:4.13.2'
     }
-    
 }
 
 subprojects {
@@ -43,7 +41,7 @@ subprojects {
         from sourceSets.main.output
     }
 
-    task createDistribution(type: Zip) {
+    tasks.register('createDistribution', Zip) {
         dependsOn 'jar'
         from jar
         archiveFileName = "hello-${project.version}.zip"
