--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ subprojects {
     
     dependencies {
         testImplementation 'junit:junit:4.13.2'
+        implementation 'javax.xml.ws:jaxws-api:2.3.1'
     }
 
     tasks.register('hello') {
