--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,10 @@ allprojects {
     repositories {
         mavenCentral()
     }
+    dependencies {
+        testImplementation 'junit:junit:4.13.2'
+        implementation 'javax.xml.ws:jaxws-api:2.3.3'
+    }
 }
 
 subprojects {
@@ -26,7 +30,7 @@ subprojects {
     
     dependencies {
         testImplementation 'junit:junit:4.13.2'
-        implementation 'javax.xml.ws:jaxws-api:2.3.1'
+        implementation 'javax.xml.ws:jaxws-api:2.3.3'
     }
 
     tasks.register('hello') {
