--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,8 @@ subprojects {
     
     dependencies {
         testImplementation 'junit:junit:4.13.2'
-        implementation 'javax.xml.ws:jaxws-api:2.2.3'
+        implementation 'javax.xml.ws:jaxws-api:2.3.1'
+        implementation 'com.sun.xml.ws:jaxws-tools:2.3.3'
     }
 
     tasks.register('hello') {
