--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ subprojects {
     
     dependencies {
         testImplementation 'junit:junit:4.13.2'
+        testImplementation 'org.jboss.arquillian.junit:arquillian-junit-container:1.8.0.Final'
         implementation 'javax.xml.ws:jaxws-api:2.3.1'
         implementation 'com.sun.xml.ws:jaxws-tools:2.3.3'
     }
